Fix Formatting errors

--- a/ansible/main.yml
+++ b/ansible/main.yml
@@ -2,7 +2,6 @@
 - hosts: all
   gather_facts: yes
   become_user: root
-
   roles:
     - role: docker
     - role: kubernetes
@@ -10,13 +9,13 @@
 - hosts: kube_master
   gather_facts: yes
   become_user: root
-
+  roles:
     - role: kube_master
 
 - hosts: kube_worker
   gather_facts: yes
   become_user: root
-
+  roles:
     - role: kube_worker
       #    - role: halyard
       #    - role: minio
