--- a/ansible/roles/kube_master/tasks/main.yml
+++ b/ansible/roles/kube_master/tasks/main.yml
@@ -1,28 +1,34 @@
 ---
-- set_fact:
-        HOME_FOLDER: "{{ lookup('env','HOME') }}"
+- name: Set Home Folder
+  set_fact:
+     HOME_FOLDER: "{{ lookup('env','HOME') }}"
+
 
 - name: Initialize Kubernetes clusters
-  command: "{{ K8S_NTWK }}"
+  command: "{{ K8S_INIT }}"
+  register: init_k8s
+  become: true
 
 
 - name:  Setup the kube config file
   command: "{{ item }}"
   with_items:
   - mkdir -p "{{ HOME_FOLDER }}"/.kube
-  - sudo cp -i /etc/kubernetes/admin.conf "{{ HOME_FOLDER }}"/.kube/config
-  - sudo chown $(id -u):$(id -g) $HOME/.kube/config
-
+  - cp -i /etc/kubernetes/admin.conf "{{ HOME_FOLDER }}"/.kube/config
+  - chown $(id -u):$(id -g) $HOME/.kube/config
+  become: true
+    #when: init_k8s
 
 - name: Setup Container networking provider
   become: false
   command: "{{ K8S_CONTAINER_NTWK }}"
-
+  #when: init_k8s
  
 - name: Generate join command
   command: kubeadm token create --print-join-command
   register: join_command
-
+  #when: init_k8s
  
 - name: Copy join command to local file
-    local_action: copy content="{{ join_command.stdout_lines[0] }}" dest="./join-command"
+  local_action: copy content="{{ join_command.stdout_lines[0] }}" dest="./join-command"
+  #when: init_k8s
