--- a/ansible/roles/kubernetes/tasks/main.yml
+++ b/ansible/roles/kubernetes/tasks/main.yml
@@ -25,6 +25,7 @@
 
 - name: Disable swap file
   command: swapoff -a
+  become: true
 
 
 - name: Remove swap file from /etc/fstab
@@ -35,10 +36,12 @@
   with_items:
       - swap
       - none
+  become: true
 
 
 - name: Restart kubelet
-    service:
+  service:
       name: kubelet
       daemon_reload: yes
       state: restarted
+  become: true
