--- a/ansible/roles/kube/defaults/main.yml
+++ b/ansible/roles/kube/defaults/main.yml
@@ -2,7 +2,7 @@
 K8S_GPG_KEY: https://packages.cloud.google.com/apt/doc/apt-key.gpg
 K8S_REPO: deb [arch=amd64] http://apt.kubernetes.io/ kubernetes-xenial main
 K8S_PACKAGES:
-  - kubeadm
-  - kubectl
-  - kubelet
+  - kubeadm=1.15.0-00
+  - kubectl=1.15.0-00
+  - kubelet=1.15.0-00
   - kubernetes-cni
