--- a/ansible/roles/kube_master/defaults/main.yml
+++ b/ansible/roles/kube_master/defaults/main.yml
@@ -1,3 +1,3 @@
 ---
-K8S_INIT: kubeadm init  --pod-network-cidr=10.244.0.0/16
-K8S_CONTAINER_NTWK: kubectl apply -f https://raw.githubusercontent.com/coreos/flannel/master/Documentation/kube-flannel.yml
+K8S_INIT: 10.244.0.0/16
+K8S_CONTAINER_NTWK: https://raw.githubusercontent.com/coreos/flannel/a70459be0084506e4ec919aa1c114638878db11b/Documentation/kube-flannel.yml
