--- a/ansible/roles/kube_master/tasks/main.yml
+++ b/ansible/roles/kube_master/tasks/main.yml
@@ -1,34 +1,43 @@
 ---
-- name: Set Home Folder
-  set_fact:
-     HOME_FOLDER: "{{ lookup('env','HOME') }}"
+- name: Initialize kubernetes cluster
+  shell: kubeadm init --pod-network-cidr={{ K8S_INIT }} >> cluster_initialized.txt
+  args:
+        chdir: $HOME
+        creates: cluster_initialized.txt
 
 
-- name: Initialize Kubernetes clusters
-  command: "{{ K8S_INIT }}"
-  register: init_k8s
-  become: true
+- name: Create .kube directory
+  become: yes
+  become_user: labadmin
+  file:
+        path: $HOME/.kube
+        state: directory
+        mode: 0755
 
 
-- name:  Setup the kube config file
-  command: "{{ item }}"
-  with_items:
-  - mkdir -p "{{ HOME_FOLDER }}"/.kube
-  - cp -i /etc/kubernetes/admin.conf "{{ HOME_FOLDER }}"/.kube/config
-  - chown $(id -u):$(id -g) $HOME/.kube/config
-  become: true
-    #when: init_k8s
+- name: Copy admin.conf to user's kube config
+  copy:
+        src: /etc/kubernetes/admin.conf
+        dest: /home/labadmin/.kube/config
+        remote_src: yes
+        owner: labadmin
 
-- name: Setup Container networking provider
-  become: false
-  command: "{{ K8S_CONTAINER_NTWK }}"
-  #when: init_k8s
- 
+
+- name: Setup Pod network
+  become: yes
+  become_user: labadmin
+  shell: kubectl apply -f {{ K8S_CONTAINER_NTWK }} >> pod_network_setup.txt
+  args:
+        chdir: $HOME
+        creates: pod_network_setup.txt
+
+
 - name: Generate join command
   command: kubeadm token create --print-join-command
   register: join_command
-  #when: init_k8s
  
-- name: Copy join command to local file
-  local_action: copy content="{{ join_command.stdout_lines[0] }}" dest="./join-command"
-  #when: init_k8s
+
+- name: Set and Copy join command to local file
+  #local_action: copy content="{{ join_command.stdout_lines[0] }}" dest="./join-command"
+  set_fact:
+          join_command: "{{ join_command.stdout_lines[0] }}"
