--- a/ansible/roles/kube_worker/tasks/main.yml
+++ b/ansible/roles/kube_worker/tasks/main.yml
@@ -1,6 +1,11 @@
 ---
-- name: Copy the join command to server location
-  copy: src=join-command dest=/tmp/join-command.sh mode=0777
+#- name: Copy the join command to server location
+#  copy: src=join-command dest=/tmp/join-command.sh mode=0777
+#- name: Join the node to cluster
+#  command: sh /tmp/join-command.sh
 
-- name: Join the node to cluster
-  command: sh /tmp/join-command.sh
+- name: join cluster
+  shell: "{{ hostvars[groups['master'][0]]['join_command'] }} >> node_joined.txt"
+  args:
+        chdir: $HOME
+        creates: node_joined.txt
